--- a/pages.html/contacto.html
+++ b/pages.html/contacto.html
@@ -34,34 +34,35 @@
                 <li><a href="contacto.html">contacto</a></li>
             </ul>
           </nav>
-          <div class="respon2">
-             <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
-               <div class="container-fluid">
-                <a class="titulo22">Papas para todos</a>
-                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-                 </button>
-                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-                     </li>
-                 </div>
-               </div>
-             </nav>
-           </div>
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img href="./index.html" src="../img/logo papas.png" alt="imagen logo">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                  </li>                    
+                </ul>
+              </div>
+            </div>
+          </nav>
       </div>        
     </div>        
   </header>
@@ -93,18 +94,22 @@
                     </form>        
                 </div>
                 <div class="redes10 col-12 col-lg-1">
-                <a class="redes3">
-                  <img src="../img/logo facebook.png" alt="facebook" class="redes">
-                  Facebook</a>
-                <a class="redes3">
-                  <img src="../img/logo instagram.jpeg" alt="instagram" class="redes">
-                  Instagram</a>
-                <a class="redes3">
-                  <img src="../img/logo twitter.png" alt="twitter" class="redes">
-                  Twitter</a>
-                <a class="redes3">
-                  <img src="../img/logo correo.png" alt="correo" class="redes">
-                  Correo</a>
+                  <div class="redes20">
+                    <img src="../img/inst.png" alt="instagram" class="redes">
+                    <a class="redes3">Instagram</a>
+                  </div>
+                  <div class="redes20">
+                    <img src="../img/logo facebook.png" alt="facebook" class="redes">
+                    <a class="redes3">Facebook</a> 
+                  </div>
+                  <div class="redes20">
+                    <img src="../img/logo twitter.png" alt="twitter" class="redes">
+                    <a class="redes3">Twitter</a>
+                  </div>
+                 <div class="redes20">
+                    <img src="../img/logo correo.png" alt="correo" class="redes">
+                    <a class="redes3"> Correo</a>
+                  </div>                                 
                 </div>
             </div>
         </div>
