--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -34,34 +34,35 @@
                   <li><a href="contacto.html">contacto</a></li>
               </ul>
             </nav>
-            <div class="respon">
-               <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
-                 <div class="container-fluid">
-                  <a class="titulo22">Papas para todos</a>
-                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                     <span class="navbar-toggler-icon"></span>
-                   </button>
-                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                       <li class="nav-item">
-                         <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-                       </li>
-                   </div>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+               <div class="container-fluid">
+                 <a class="navbar-brand" href="#">
+                   <img href="./index.html" src="../img/logo papas.png" alt="imagen logo">
+                 </a>
+                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                   <span class="navbar-toggler-icon"></span>
+                 </button>
+                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                     </li>                    
+                   </ul>
                  </div>
-               </nav>
-             </div>
+               </div>
+             </nav>
         </div>        
       </div>        
     </header>
@@ -194,7 +195,7 @@
            <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
            <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
            <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
-           <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
+           <b class="col-12 col-sm-10 col-lg-3 referencia">Todos los derechos reservados</b> 
          </div>        
        </div>               
      </footer>
