--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12 col-sm-10 col-lg-1">
+          <div class="col-3 col-sm-4 col-lg-1">
             <a id="logo" href="./index.html"><img src="./img/logo papas.png" alt="imagen logo"></a>
           </div>
-          <div class="col-12 col-sm-10 col-lg-2 ">
+          <div class="col-6 col-sm-3 col-lg-2 ">
             <p class="tituloLogo">Papas Para Todos</p>
           </div>
-            <nav class="col-3 col-sm-10 col-lg-9">
+            <nav class="col-3 col-sm-5 col-lg-9">
               <ul class=" desktop col-12 paginas">
                   <li><a href="index.html">inicio</a></li>
                   <li><a href="pages.html/nosotros.html">nosotros</a></li>
@@ -34,34 +34,36 @@
                   <li><a href="pages.html/contacto.html">contacto</a></li>
               </ul>
             </nav>
-            <div class="respon">
-              <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                  <a class="titulo22">Papas para todos</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages.html/nosotros.html">Nosotros</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages.html/productos.html">Productos</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages.html/tienda.html">Tienda</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages.html/contacto.html">Contacto</a>
-                      </li>
-                  </div>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                  <img href="./index.html" src="./img/logo papas.png" alt="imagen logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="pages.html/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="pages.html/productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="pages.html/tienda.html">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="pages.html/contacto.html">Contacto</a>
+                    </li>
+                    
+                  </ul>
                 </div>
-              </nav>
-            </div>          
+              </div>
+            </nav>
         </div>        
       </div>        
     </header>
