--- a/pages.html/productos.html
+++ b/pages.html/productos.html
@@ -36,8 +36,8 @@
               </nav>
               <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                    <img href="./index.html" src="../img/logo papas.png" alt="imagen logo">
+                  <a class="navbar-brand" href="../index.html" >
+                    <img src="../img/logo papas.png" alt="imagen logo">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
