--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </nav>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html" >
+                <a class="navbar-brand" href="./index.html" id="logo2" >
                   <img src="./img/logo papas.png" alt="imagen logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -140,7 +140,8 @@
         <div class="container-fluid">
           <div class="col-12">
             <p class="irAseccion">Descubre mas en la seccion Productos y nuestra Tienda</p>
-            <a class="subir" href="#logo">ir arriba</a>
+            <a class="subirDesk" href="#logo" >ir arriba</a>
+            <a class="subirM" href="#logo2" >ir arriba</a>
           </div>         
         </div>                  
     <footer class="f" id="bajar">
