--- a/pages.html/nosotros.html
+++ b/pages.html/nosotros.html
@@ -36,7 +36,7 @@
           </nav>
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html" >
+              <a class="navbar-brand" href="../index.html" id="logo2" >
                 <img src="../img/logo papas.png" alt="imagen logo">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -96,7 +96,8 @@
         </div>
         <div class="container-fluid">
           <div class="col-12">
-            <a class="subir" href="#logo">ir arriba</a>
+            <a class="subirDesk" href="#logo" >ir arriba</a>
+            <a class="subirM" href="#logo2" >ir arriba</a>
           </div>
         </div>   
     </main>
