--- a/pages.html/contacto.html
+++ b/pages.html/contacto.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--Metaetiquetas y links hoja de estilos y cdn para bootstrap y animate-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/icono papas.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
-     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> 
     <title>Contacto</title>
@@ -17,23 +18,28 @@
 </head>
 <body>
   <header>
+    <!--Logo y titulo-->
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-sm-10 col-lg-1">
-          <a id="logo" href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
+          <a id="logo" href="../index.html">
+            <img src="../img/logo papas.png" alt="imagen logo" class="log">
+          </a>
         </div>
         <div class="col-12 col-sm-10 col-lg-2 ">
           <p class="tituloLogo">Papas Para Todos</p>
         </div>
+        <!--Menu desktop-->
           <nav class="col-12 col-sm-10 col-lg-9">
             <ul class="desktop col-12 paginas">
-                <li><a href="../index.html">inicio</a></li>
-                <li><a href="nosotros.html">nosotros</a></li>
-                <li><a href="productos.html">productos</a></li>
-                <li><a href="tienda.html">tienda</a></li>
-                <li><a href="contacto.html">contacto</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="tienda.html">Tienda</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
           </nav>
+           <!--Logo, titulo y menu versión móvil-->
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html" id="logo2" >
@@ -67,24 +73,26 @@
     </div>        
   </header>
     <main>
+      <!--Titulo formulario-->
       <h1 class="animate__animated animate__fadeInDown">Completa nuestro formulario</h1>
+      <!--Formulario de contacto-->
         <div class="container-fluid">
             <div class="row">                
-                <div class="col-11">
+                <div class="col-12 col-sm-12 col-lg-11">
                     <form action="" class="formulario">
-                        <div class="col-6">
+                        <div class="col-12 col-sm-10 col-lg-9">
                             <input type="text" name="nombre" placeholder="nombre">
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-sm-10 col-lg-9">
                             <input type="number" name="dni" placeholder="documento">
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-sm-10 col-lg-9">
                             <input type="email" name="correo" placeholder="correo electronico">
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-sm-10 col-lg-9">
                             <input type="password" name="contraseña" placeholder="contraseña">
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-sm-10 col-lg-9">
                             <textarea name="comentarios" id="" cols="30" rows="10"></textarea>
                             <label for="comentarios">comentarios</label>
                         </div>
@@ -93,49 +101,53 @@
                         </div>
                     </form>        
                 </div>
-                <div class="redes10 col-12 col-lg-1">
+                <!--Redes sociales-->
+                <div class="redes10 col-12 col-sm-10 col-lg-1">
                   <div class="redes20">
-                    <img src="../img/inst.png" alt="instagram" class="redes">
+                    <img src="../img/inst.png" alt="instagram" class="redes instagram">
                     <a class="redes3">Instagram</a>
                   </div>
                   <div class="redes20">
-                    <img src="../img/logo facebook.png" alt="facebook" class="redes">
+                    <img src="../img/logo facebook.png" alt="facebook" class="redes facebook">
                     <a class="redes3">Facebook</a> 
                   </div>
                   <div class="redes20">
-                    <img src="../img/logo twitter.png" alt="twitter" class="redes">
+                    <img src="../img/logo twitter.png" alt="twitter" class="redes twitter">
                     <a class="redes3">Twitter</a>
                   </div>
-                 <div class="redes20">
-                    <img src="../img/logo correo.png" alt="correo" class="redes">
+                  <div class="redes20">
+                    <img src="../img/logo correo.png" alt="correo" class="redes correo">
                     <a class="redes3"> Correo</a>
                   </div>                                 
                 </div>
             </div>
         </div>
-         <div class="container">
+        <!--Mapa-->
+          <div class="container">
             <div class="row">
-                <p class="direccion col-12">¿Donde estamos?</p>
+                <p class="direccion col-12 col-sm-12 col-sm-12">¿Donde estamos?</p>
                 <iframe class="mapa col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8238.796441991522!2d-58.64952620213689!3d-34.96742198223868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcdf4d633755b7%3A0x642577d8e20df0ef!2sVicente%20Casares!5e0!3m2!1ses!2sar!4v1685190165285!5m2!1ses!2sar" 
                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-         </div>
+          </div>
         </div>  
+         <!--Links para subir versión desktop y mobile-->
         <div class="container-fluid">
-          <div class="col-12">
+          <div class="col-12 col-sm-10 col-lg-1">
             <a class="subirDesk" href="#logo" >ir arriba</a>
             <a class="subirM" href="#logo2" >ir arriba</a>
           </div>
         </div>        
     </main>
+    <!--pie de página-->  
     <footer class="f">
       <div  class="container-fluid">
-         <div class="row">
-           <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
-           <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
-           <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
-           <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
-         </div>        
-       </div>               
-     </footer>
- </body>
+          <div class="row">
+            <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
+            <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
+            <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
+            <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
+          </div>        
+        </div>               
+      </footer>
+  </body>
 </html>
