--- a/pages.html/productos.html
+++ b/pages.html/productos.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--Metaetiquetas y links hoja de estilos y cdn para bootstrap y animate-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/icono papas.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
-     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> 
     <title>Inicio</title>
@@ -17,23 +18,28 @@
 </head>
 <body>
     <header>
+      <!--Logo y titulo-->
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 col-sm-10 col-lg-1">
-              <a id="logo" href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
+              <a id="logo" href="../index.html">
+                <img src="../img/logo papas.png" alt="imagen logo" class="log">
+              </a>
             </div>
             <div class="col-12 col-sm-10 col-lg-2 ">
               <p class="tituloLogo">Papas Para Todos</p>
             </div>
+            <!--Menu desktop-->
               <nav class="col-12 col-sm-10 col-lg-9">
                 <ul class=" desktop col-12 paginas">
-                    <li><a href="../index.html">inicio</a></li>
-                    <li><a href="nosotros.html">nosotros</a></li>
-                    <li><a href="productos.html">productos</a></li>
-                    <li><a href="tienda.html">tienda</a></li>
-                    <li><a href="contacto.html">contacto</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
               </nav>
+               <!--Logo, titulo y menu versión móvil-->
               <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="../index.html" id="logo2">
@@ -67,68 +73,108 @@
         </div>        
       </header>
     <main>
+      <!--Titulo principal y fotos de productos-->
         <div class="container">
             <h1 class="col-12 animate__animated animate__fadeInDown">Nuestros productos</h1>
                 <div class="row">
-                    <div class="col-12 col-lg-3 imgT">
-                         <img src="../img/papines 2.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papines 2.jpg" alt="Papas noissette" class="imgProducto">
+                          <p class="descrip">Papas noissette</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                         <img src="../img/papines 5.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papines 5.jpg" alt="Papines premium" class="imgProducto">
+                           <p class="descrip">Papines premium</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/papines 5.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papas18.jpeg" alt="Papa andina" class="imgProducto">
+                           <p class="descrip">Papa andina</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/papines 4.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papines 4.jpg" alt="Papa consumo" class="imgProducto">
+                           <p class="descrip">Papa consumo</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/Papines.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                       
+                        <a href="tienda.html">
+                          <img src="../img/Papines.jpg" alt="Papines" class="imgProducto">
+                           <p class="descrip">Papines</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/papines 3.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papines 3.jpg" alt="Mini papa" class="imgProducto">
+                           <p class="descrip">mini papa</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/papines 2.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papas17.jpg" alt="Papa andina" class="imgProducto">
+                           <p class="descrip">Papa andina</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/papines 5.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papas16.jpeg" alt="Papa sudeste" class="imgProducto">
+                           <p class="descrip">Papa sudeste</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/papines 4.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papines 4.jpg" alt="Papa especial" class="imgProducto">
+                           <p class="descrip">Papa especial</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/Papines.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papas15.jpeg" alt="Papa patagonica" class="imgProducto">
+                           <p class="descrip">Papa patagonica</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                        <img src="../img/papines 3.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                        
+                        <a href="tienda.html">
+                          <img src="../img/papas14.jpeg" alt="Papa copetin" class="imgProducto">
+                           <p class="descrip">Papa copetin</p>
+                        </a>
                     </div>
-                    <div class="col-12 col-lg-3 imgT">
-                         <img src="../img/papines 3.jpg" alt="papines" class="imgProducto">
+                    <div class="col-12 col-lg-3 imgT">                      
+                        <a href="tienda.html">
+                          <img src="../img/papas13.jpg" alt="Papa Cordoba" class="imgProducto">
+                           <p class="descrip">Papa Cordoba</p>
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="col-12">
+            <!--Link para ir a tienda-->
+            <div class="col-12 col-sm-10 col-lg-6">
                 <div class="IrAtienda tienda10">
                     Adquierelos en nuestra Tienda <a class="link" href="./tienda.html">ir ahora</a>
                 </div>
             </div>
+             <!--Links para subir versión desktop y mobile-->
             <div class="container-fluid">
-                <div class="col-12">
+                <div class="col-12 col-sm-10 col-lg-1">
                   <a class="subirDesk" href="#logo" >ir arriba</a>
                   <a class="subirM" href="#logo2" >ir arriba</a>
                 </div>
               </div>   
-     </main>
-     <footer class="f">
+      </main>
+      <!--pie de página-->  
+      <footer class="f">
         <div  class="container-fluid">
-           <div class="row">
-             <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
-             <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
-             <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
-             <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
-           </div>        
-         </div>               
-       </footer>
- </body>
+            <div class="row">
+              <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
+              <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
+              <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
+              <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
+            </div>        
+          </div>               
+        </footer>
+  </body>
 </html>
