--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -1,72 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/icono papas.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
-     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> 
-    <title>Tienda</title>
-    <meta name="description" content="Tienda para comprar nuestros productos">
-    <meta name="keywords" content="papas papines papas consumo papas noissette mini papas">
+   <!--Metaetiquetas y links hoja de estilos y cdn para bootstrap y animate-->
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="shortcut icon" href="../img/icono papas.ico">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="../css/estilos.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> 
+   <title>Tienda</title>
+   <meta name="description" content="Tienda para comprar nuestros productos">
+   <meta name="keywords" content="papas papines papas consumo papas noissette mini papas">
 </head>
 <body>
    <header>
+      <!--Logo y titulo-->
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-12 col-sm-10 col-lg-1">
-            <a id="logo" href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
-          </div>
-          <div class="col-12 col-sm-10 col-lg-2 ">
-            <p class="tituloLogo">Papas Para Todos</p>
-          </div>
+         <div class="row">
+            <div class="col-12 col-sm-10 col-lg-1">
+            <a id="logo" href="../index.html">
+               <img src="../img/logo papas.png" alt="imagen logo" class="log">
+            </a>
+            </div>
+            <div class="col-12 col-sm-10 col-lg-2 ">
+               <p class="tituloLogo">Papas Para Todos</p>
+            </div>
+            <!--Menu desktop-->
             <nav class="col-12 col-sm-10 col-lg-9">
-              <ul class="desktop col-12 paginas">
-                  <li><a href="../index.html">inicio</a></li>
-                  <li><a href="nosotros.html">nosotros</a></li>
-                  <li><a href="productos.html">productos</a></li>
-                  <li><a href="tienda.html">tienda</a></li>
-                  <li><a href="contacto.html">contacto</a></li>
-              </ul>
+               <ul class="desktop col-12 paginas">
+                  <li><a href="../index.html">Inicio</a></li>
+                  <li><a href="nosotros.html">Nosotros</a></li>
+                  <li><a href="productos.html">Productos</a></li>
+                  <li><a href="tienda.html">Tienda</a></li>
+                  <li><a href="contacto.html">Contacto</a></li>
+               </ul>
             </nav>
+             <!--Logo, titulo y menu versión móvil-->
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                <div class="container-fluid">
-                 <a class="navbar-brand" href="../index.html" id="logo2" >
-                   <img src="../img/logo papas.png" alt="imagen logo">
-                 </a>
-                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-                 </button>
-                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-                     </li>                    
-                   </ul>
-                 </div>
+                  <a class="navbar-brand" href="../index.html" id="logo2" >
+                     <img src="../img/logo papas.png" alt="imagen logo">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                     <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                           <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                        </li>                    
+                     </ul>
+                  </div>
                </div>
-             </nav>
-        </div>        
+            </nav>
+         </div>        
       </div>        
-    </header>
-    <main>
+   </header>
+   <main>
+      <!--Titulo principal y fotos con descripción de la tienda online-->
       <div class="container">
          <div class="row">
             <div class="online">
@@ -77,128 +84,130 @@
                <div class="imgT"> 
                   <img src="../img/Papines.jpg" alt="papines">
                </div>            
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
                <img id="carrito" src="../img/carrito.png" alt="comprar">  
-              </div>
-           </div>           
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+               </div>
+            </div>           
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div> 
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar"> 
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar">
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar">
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>               
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar"> 
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div> 
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar"> 
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>            
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar"> 
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar"> 
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>              
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar"> 
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar">
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar">
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar"> 
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>              
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar">
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar">
+               </div>
+            </div> 
+            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
             <div class="imgT">
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <img id="carrito" src="../img/carrito.png" alt="comprar">
-              </div>
-           </div> 
+               <div id="precio2">
+                  <p class="precio">papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar">
+               </div>
+            </div> 
          </div>
-       </div>
-       <div class="container-fluid">
-         <div class="col-12">
-            <a class="subirDesk" href="#logo" >ir arriba</a>
-            <a class="subirM" href="#logo2" >ir arriba</a>
          </div>
-       </div>         
-     </main>
-     <footer class="f">
+          <!--Links para subir versión desktop y mobile-->
+         <div class="container-fluid">
+            <div class="col-12 col-sm-10 col-lg-1">
+               <a class="subirDesk" href="#logo" >ir arriba</a>
+               <a class="subirM" href="#logo2" >ir arriba</a>
+            </div>
+         </div>         
+   </main>
+   <!--pie de página-->  
+   <footer class="f">
       <div  class="container-fluid">
          <div class="row">
-           <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
-           <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
-           <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
-           <b class="col-12 col-sm-10 col-lg-3 referencia">Todos los derechos reservados</b> 
+            <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
+            <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
+            <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
+            <b class="col-12 col-sm-10 col-lg-3 referencia">Todos los derechos reservados</b> 
          </div>        
-       </div>               
-     </footer>
+         </div>               
+   </footer>
 </body>
 </html>
